src/objects/CartItem.object
<CustomObject>
    <fields>
        <fullName>Condition_Code_Price_Type__c</fullName>
        <label>Condition Code Price Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/OH Core</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/SV Core</fullName>
                </value>
                <value>
                    <fullName>Flat Rate w/Repairable Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>